--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "express": "^4.17.1",
+    "node-cron": "^3.0.0",
     "sqlite3": "^5.0.2",
     "telegraf": "^4.4.2"
   }
