--- a/okteto-stack.yml
+++ b/okteto-stack.yml
@@ -8,10 +8,8 @@ services:
       - TG_TOKEN=$TG_TOKEN
       - CHAT_ID=$CHAT_ID
     volumes:
-      - data:./data
+      - ./data
 endpoints:
   - path: /
     service: node
     port: 8080
-volumes:
-  - data
